[package]
name = "gamechooser-rs"
version = "0.1.0"
authors = ["Fil Krynicki <filipkrynicki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "2.0.0"
chrono = "0.4"
clap = "2.33.3"
csv = "1.1"
dirs = "3.0.1"
read_input = "0.8.4"
